<resources>
    <string name="app_name">HappyDog - For Walkers</string>
    <string name="app_simple_name">HappyDog</string>
    <string name="app_sub_name">For Walkers</string>

    <!-- Login Activity -->
    <string name="email_placeholder">Enter your email</string>
    <string name="password_placeholder">Enter your password</string>
    <string name="login_button_text">Login</string>
    <string name="registration_text">New user? <b><u>Sign-up here</u></b></string>
    
    <!--Sign-up Activity -->
    <string name="name_placeholder">Enter your name</string>
    <string name="lastname_placeholder">Enter your last name</string>
    <string name="birth_date_placeholder">Enter your birth date</string>
    <string name="phone_placeholder">Enter your phone</string>
    <string name="signup_button_text">Sign-up</string>

    <!-- Errors -->
    <string name="empty_fields">Fields cannot be empty</string>
    <string name="invalid_email">Invalid email</string>
    <string name="invalid_credentials">Invalid credentials</string>
    <string name="generic_error">There was en error, please try again.</string>
    <string name="email_taken">Email not available</string>
</resources>
