<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/inputsContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/medium_spacing"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/nameInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name_placeholder"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/emailInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_placeholder"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/passwordInput"
            android:layout_marginTop="@dimen/medium_spacing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_placeholder"
                android:inputType="textPassword"/>

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/registerButton"
            android:layout_marginTop="@dimen/medium_spacing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/medium_spacing"
            android:layout_marginLeft="@dimen/medium_spacing"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:background="@color/colorPrimary"
            android:textColor="@color/white"
            android:text="@string/signup_button_text"/>
    </LinearLayout>

    <com.github.ybq.android.spinkit.SpinKitView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/progress"
        style="@style/SpinKitView.Large.Circle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_centerInParent="true"
        android:visibility="gone"
        app:SpinKit_Color="@color/colorAccent" />



</RelativeLayout>